dnl $ZEL: configure.in,v 1.2 2002/08/19 10:54:38 wuestner Exp $
dnl Process this file with autoconf to produce a configure script.

AC_INIT(reset1100.c)

dnl Checks for programs.
AC_CANONICAL_SYSTEM
AC_PROG_MAKE_SET

echo target_os=$target_os
AC_SUBST(target_os)

AC_ARG_WITH(driverbase, [  --with-driverbase],
	  driverbase=$withval, driverbase=['$(srcdir)/..'])
AC_SUBST(driverbase)

dnl AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)
